syntax = "proto3";
import "akkaserverless/annotations.proto";

package actor.person.domain;

message PersonCreated {
  string user_id = 1 [(akkaserverless.field).entity_key = true];
  string person_id = 2 [(akkaserverless.field).entity_key = true];
  string name = 3;
}

message PersonState {
  string name = 3;
}

